--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,4 +8,5 @@
     <dimen name="view_padding36">36dp</dimen>
 
     <dimen name="view_loading_dialog">96dp</dimen>
+    <dimen name="view_result_dialog">124dp</dimen>
 </resources>
